clusters/homelab/apps/testing/go-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-api
  namespace: testing
  labels:
    app: go-api
spec:
  selector:
    app: go-api
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
